Use Android-compatible UTF-8 URL encoding and print complete lint diagnostics